tests/baselines/reference/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.errors.txt
tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(19,1): error TS2684: The 'this' context of type 'Chain<A>' is not assignable to method's 'this' of type 'Chain<T>'.
  Type 'A' is not assignable to type 'T'.
    'A' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(19,1): error TS2684: The 'this' context of type 'Chain<A>' is not assignable to method's 'this' of type 'Chain<T>'.
tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(19,1): error TS2684: The 'this' context of type 'Chain<A>' is not assignable to method's 'this' of type 'Chain<T>'.
tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(19,1): error TS2684: The 'this' context of type 'Chain<A>' is not assignable to method's 'this' of type 'Chain<T>'.


==== tests/cases/compiler/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts (4 errors) ====
    class Chain<T extends A> {
        constructor(public value: T) { }
        then<S extends T>(cb: (x: T) => S): Chain<S> {
            return null;
        }
    }
    
    class A {
        x;
    }
    class B extends A {
        y;
    }
    class C extends B {
        z;
    }
    
    // Ok to go down the chain, but error to try to climb back up
    (new Chain(new A)).then(a => new B).then(b => new C).then(c => new B).then(b => new A);
    ~~~~~~~~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'Chain<A>' is not assignable to method's 'this' of type 'Chain<T>'.
!!! error TS2684:   Type 'A' is not assignable to type 'T'.
!!! error TS2684:     'A' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'Chain<A>' is not assignable to method's 'this' of type 'Chain<T>'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'Chain<A>' is not assignable to method's 'this' of type 'Chain<T>'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'Chain<A>' is not assignable to method's 'this' of type 'Chain<T>'.